--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <img src="img/money.png" alt="" class="money-img" />
-    <h1>Exchange Rate Calculator- Swayam</h1>
-    <p>Choose the currency and the amounts to get the exchange rate</p>
+    <h1>Exchange Rate Calculator</h1>
+    <p>Choose the currency and the amounts to get the exchange rate.</p>
 
     <div class="container">
       <div class="currency">
