--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <img src="img/money.png" alt="" class="money-img" />
     <h1>Exchange Rate Calculator</h1>
+    <h1> Azure is cool so far</h1>
     <p>Choose the currency and the amounts to get the exchange rate.</p>
 
     <div class="container">
