--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <img src="img/money.png" alt="" class="money-img" />
-    <h1>Exchange Rate Calculator</h1>
+    <h1>Exchange Rate Calculator By Swayam</h1>
     <h1> Azure is cool so far</h1>
     <p>Choose the currency and the amounts to get the exchange rate.</p>
 
